# neutron-transport-PINNs

./: .gitignore  AGENTS.md  CHANGELOG.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  Notas.md  QUICKSTART.md  README.md  README_UPDATE.txt  example_config.json  main.py  mi_problema.txt  pyproject.toml
NTS_DD/: NTS_DD_EXAMPLE_INPUT.json  resultado.json
NTS_RM_CN/: NTS_RM_CN_EXAMPLE_INPUT.json  NTS_RM_CN_EXPLICACION.md
NTS_RM_LLM/: NTS_RM_LLN_EXPLICACION.md
NTS_STEP/: NTS_STEP_EXPLICACION.md
cli/: __init__.py  commands.py
core/: __init__.py  config.py  input_builder.py  validator.py
doc/: NTS_DOCUMENTATION.md  QUICK_REFERENCE.txt
execution/: __init__.py  parallel.py  runner.py
solvers/doc_solvers/: NTS_DD_EXPLICACION.md  NTS_LD_EXAMPLE_INPUT.json  NTS_LD_EXPLICACION.md  NTS_RM_LLN_EXAMPLE_INPUT.json  NTS_STEP_EXAMPLE_INPUT.json
solvers/runners/: NTS_DD  NTS_DD.c  NTS_STEP
templates/: base_input.json
utils/: __init__.py  logger.py  paths.py
